--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/93d9fc9c96.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./index.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Shopping Cart</title>
 </head>
@@ -15,7 +15,7 @@
         <section class="grid grid-cols-5 gap-5 mt-[30px]">
             <div>
                <div class="relative " data-id= "1" data-name="Waffle with Berries" data-price= "6.50" data-image="images/image-waffle-desktop.jpg">
-                   <img src="images/image-waffle-desktop.jpg" alt="waffle" class="w-[250px] rounded imgs">
+                   <img src="./images/image-waffle-desktop.jpg" alt="waffle" class="w-[250px] rounded imgs">
                    <button class=" add-to-cart-btn flex bg-[#fcf9f7] rounded-2xl px-[20px] py-[7px] border-black border-[1px] ml-[55px] absolute bottom-[-15px] transform-translate-x-1/2"  data-id="1" data-name="Waffle with Berries" data-price="$6.50" data-image="images/image-waffle-desktop.jpg">
                         <img src="images/icon-add-to-cart.svg" alt="cart" class="w-[15px] mt-[2px] z">
                         <p class="text-black text-sm ml-[5px] ">Add to Cart</p>
