--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
         <h1 class="text-4xl font-bold mt-24">Desserts</h1>
         <section class="grid grid-cols-5 gap-5 mt-[30px]">
             <div>
-               <div class="relative " data-id= "1" data-name="Waffle with Berries" data-price= "6.50" data-image="images/image-waffle-desktop.jpg">
+               <div class="relative " data-id= "1" data-name="Waffle with Berries" data-price= "6.50" data-image="./images/image-waffle-desktop.jpg">
                    <img src="./images/image-waffle-desktop.jpg" alt="waffle" class="w-[250px] rounded imgs">
-                   <button class=" add-to-cart-btn flex bg-[#fcf9f7] rounded-2xl px-[20px] py-[7px] border-black border-[1px] ml-[55px] absolute bottom-[-15px] transform-translate-x-1/2"  data-id="1" data-name="Waffle with Berries" data-price="$6.50" data-image="images/image-waffle-desktop.jpg">
-                        <img src="images/icon-add-to-cart.svg" alt="cart" class="w-[15px] mt-[2px] z">
+                   <button class=" add-to-cart-btn flex bg-[#fcf9f7] rounded-2xl px-[20px] py-[7px] border-black border-[1px] ml-[55px] absolute bottom-[-15px] transform-translate-x-1/2"  data-id="1" data-name="Waffle with Berries" data-price="$6.50" data-image="./images/image-waffle-desktop.jpg">
+                        <img src="./images/icon-add-to-cart.svg" alt="cart" class="w-[15px] mt-[2px] z">
                         <p class="text-black text-sm ml-[5px] ">Add to Cart</p>
                    </button>
 
                    <div class=" btn2 flex bg-[#c73a0f] rounded-2xl px-[20px] py-[7px] border-[#c73a0f] border-[1px] ml-[55px] absolute bottom-[-15px] transform-translate-x-1/2 " style="display: none;">
                     <button class=" counter-minus bg-[#c73a0f] px-[4px] py-[6px] rounded-3xl border-white border-2 mt-[1px]" data-id="1">
-                        <img src="/icon-decrement-quantity.svg" alt="minus" class="w-[6px] ">
+                        <img src="./icon-decrement-quantity.svg" alt="minus" class="w-[6px] ">
                     </button>
                     <span class="proNum text-white text-sm ml-[20px]" data-id="1">1</span>
                     <button class="counter-plus bg-[#c73a0f] px-[3px] py-[3px] rounded-3xl border-white border-2 ml-[20px] mt-[2px]" data-id= "1">
-                        <img src="/icon-increment-quantity.svg" alt="plus" class="w-[6px] ">
+                        <img src="./icon-increment-quantity.svg" alt="plus" class="w-[6px] ">
                     </button>
                     </div>
                 </div>
@@ -38,20 +38,20 @@
                </div>
             </div>
             <div>
-                <div class="relative" data-id= "2" data-name="Vanilla Bean Creme Brulee" data-price= "7.00" data-image="/images/image-creme-brulee-desktop.jpg">
-                    <img src="/images/image-creme-brulee-desktop.jpg" alt="creme" class="w-[250px] rounded imgs">
-                    <button class="add-to-cart-btn flex  bg-[#fcf9f7] rounded-2xl px-[20px] py-[7px] border-black border-[1px] ml-[55px] absolute bottom-[-15px] transform-translate-x-1/2"  data-id="2" data-name="Vanilla Bean Creme Brulee" data-price="$7.00" data-image="/images/image-creme-brulee-desktop.jpg">
-                         <img src="/images/icon-add-to-cart.svg" alt="cart" class="w-[15px] mt-[2px]">
+                <div class="relative" data-id= "2" data-name="Vanilla Bean Creme Brulee" data-price= "7.00" data-image="./images/image-creme-brulee-desktop.jpg">
+                    <img src="./images/image-creme-brulee-desktop.jpg" alt="creme" class="w-[250px] rounded imgs">
+                    <button class="add-to-cart-btn flex  bg-[#fcf9f7] rounded-2xl px-[20px] py-[7px] border-black border-[1px] ml-[55px] absolute bottom-[-15px] transform-translate-x-1/2"  data-id="2" data-name="Vanilla Bean Creme Brulee" data-price="$7.00" data-image="./images/image-creme-brulee-desktop.jpg">
+                         <img src="./images/icon-add-to-cart.svg" alt="cart" class="w-[15px] mt-[2px]">
                          <p class="text-black text-sm ml-[5px] ">Add to Cart</p>
                     </button>
 
                     <div class=" btn2 flex bg-[#c73a0f] rounded-2xl px-[20px] py-[7px] border-[#c73a0f] border-[1px] ml-[55px] absolute bottom-[-15px] transform-translate-x-1/2 "  style="display: none;">
                         <button class="counter-minus bg-[#c73a0f] px-[4px] py-[6px] rounded-3xl border-white border-2 mt-[1px]" data-id="2">
-                            <img src="/icon-decrement-quantity.svg" alt="minus" class="w-[6px] ">
+                            <img src="./icon-decrement-quantity.svg" alt="minus" class="w-[6px] ">
                         </button>
                         <span class="proNum text-white text-sm ml-[20px]"  data-id="2">1</span>
                         <button class="counter-plus bg-[#c73a0f] px-[3px] py-[3px] rounded-3xl border-white border-2 ml-[20px] mt-[2px]" data-id= "2">
-                            <img src="/icon-increment-quantity.svg" alt="plus" class="w-[6px] ">
+                            <img src="./icon-increment-quantity.svg" alt="plus" class="w-[6px] ">
                         </button>
                     </div>
                 </div>
@@ -62,20 +62,20 @@
                 </div>
             </div>
             <div>
-                <div class="relative"  data-id= "3" data-name="Macaron Mix of Five" data-price= "8.00" data-image="/images/image-macaron-desktop.jpg">
-                    <img src="/images/image-macaron-desktop.jpg" alt="macaron" class="w-[250px] rounded imgs">
-                    <button class="add-to-cart-btn flex bg-[#fcf9f7] rounded-2xl px-[20px] py-[7px] border-black border-[1px] ml-[55px] absolute bottom-[-15px] transform-translate-x-1/2"  data-id="3" data-name="Macaron Mix of Five" data-price="$8.00" data-image="/images/image-macaron-desktop.jpg">
-                         <img src="/images/icon-add-to-cart.svg" alt="cart" class="w-[15px] mt-[2px]">
+                <div class="relative"  data-id= "3" data-name="Macaron Mix of Five" data-price= "8.00" data-image="./images/image-macaron-desktop.jpg">
+                    <img src="./images/image-macaron-desktop.jpg" alt="macaron" class="w-[250px] rounded imgs">
+                    <button class="add-to-cart-btn flex bg-[#fcf9f7] rounded-2xl px-[20px] py-[7px] border-black border-[1px] ml-[55px] absolute bottom-[-15px] transform-translate-x-1/2"  data-id="3" data-name="Macaron Mix of Five" data-price="$8.00" data-image="./images/image-macaron-desktop.jpg">
+                         <img src="./images/icon-add-to-cart.svg" alt="cart" class="w-[15px] mt-[2px]">
                          <p class="text-black text-sm ml-[5px]">Add to Cart</p>
                     </button>
 
                     <div  class=" btn2 flex bg-[#c73a0f] rounded-2xl px-[20px] py-[7px] border-[#c73a0f] border-[1px] ml-[55px] absolute bottom-[-15px] transform-translate-x-1/2 " data-id= "3" style="display: none;"  >
                         <button class="counter-minus bg-[#c73a0f] px-[4px] py-[6px] rounded-3xl border-white border-2 mt-[1px]" data-id="3">
-                            <img src="/icon-decrement-quantity.svg" alt="minus" class="w-[6px] ">
+                            <img src="./icon-decrement-quantity.svg" alt="minus" class="w-[6px] ">
                         </button>
                         <span class="proNum text-white text-sm ml-[20px]"  data-id="3">1</span>
                         <button class="counter-plus bg-[#c73a0f] px-[3px] py-[3px] rounded-3xl border-white border-2 ml-[20px] mt-[2px]" data-id= "3">
-                            <img src="/icon-increment-quantity.svg" alt="plus" class="w-[6px] ">
+                            <img src="./icon-increment-quantity.svg" alt="plus" class="w-[6px] ">
                         </button>
                     </div>
                 </div>
@@ -274,6 +274,6 @@
             </button>
         </div>
     
-    <script src="/index.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
