--- a/index.html
+++ b/index.html
@@ -274,6 +274,6 @@
             </button>
         </div>
     
-    <script src=".index.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
